--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>Redux • TodoMVC</title>
-    <link rel="stylesheet" href="/css/todomvc-app.css">
+    <link rel="stylesheet" href="./css/todomvc-app.css">
   </head>
   <body>
     <div class="todoapp" id="root"></div>
 
     <!-- // Todo Application -->
-    <script src="/js/todomvc-app.js"></script>
+    <script src="./js/todomvc-app.js"></script>
   </body>
 </html>
