--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Redux • TodoMVC</title>
-    <link rel="stylesheet" href="./css/todomvc-app.css">
-  </head>
-  <body>
-    <div class="todoapp" id="root"></div>
+<!DOCTYPE html><!--[if lt IE 7 ]> <html lang="en" class="ie6" > <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="ie7" > <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="ie8" > <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="ie9" > <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="" > <!--<![endif]-->
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-type" content="text/html; charset=utf-8">
+  <title>Redux • TodoMVC</title>
+  <meta name="description" content="React/Redux TodoMVC">
+  <meta name="keywords" content="redux, todoapp, todo app, todomvc, todo mvc">
 
-    <!-- // Todo Application -->
-    <script src="./js/todomvc-app.js"></script>
-  </body>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="./css/todomvc-app.css" rel="stylesheet"></head>
+<body>
+  <div class="todoapp" id="root"><div data-reactid=".1arbuntn1fk" data-react-checksum="1476095281"><header class="header" data-reactid=".1arbuntn1fk.0"><h1 data-reactid=".1arbuntn1fk.0.0">todos</h1><input type="text" value="" placeholder="What needs to be done" class="new-todo" data-reactid=".1arbuntn1fk.0.1"/></header><section class="main" data-reactid=".1arbuntn1fk.1"></section></div></div>
+
+  
+<script src="./js/todomvc-app.js"></script></body>
 </html>
