--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./css/todomvc-app.css" rel="stylesheet"></head>
 <body>
-  <div class="todoapp" id="root"><div data-reactid=".1arbuntn1fk" data-react-checksum="1476095281"><header class="header" data-reactid=".1arbuntn1fk.0"><h1 data-reactid=".1arbuntn1fk.0.0">todos</h1><input type="text" value="" placeholder="What needs to be done" class="new-todo" data-reactid=".1arbuntn1fk.0.1"/></header><section class="main" data-reactid=".1arbuntn1fk.1"></section></div></div>
+  <div class="todoapp" id="root"><div data-reactid=".ojo6l30ef4" data-react-checksum="1856989388"><header class="header" data-reactid=".ojo6l30ef4.0"><h1 data-reactid=".ojo6l30ef4.0.0">todos</h1><input type="text" value="" placeholder="What needs to be done" class="new-todo" data-reactid=".ojo6l30ef4.0.1"/></header><section class="main" data-reactid=".ojo6l30ef4.1"></section></div></div>
 
   
 <script src="./js/todomvc-app.js"></script></body>
