--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="./css/todomvc-app.css" rel="stylesheet"></head>
 <body>
-  <div class="todoapp" id="root"><div data-reactid=".1rqnihb629s" data-react-checksum="154954557"><header class="header" data-reactid=".1rqnihb629s.0"><h1 data-reactid=".1rqnihb629s.0.0">todos</h1><input type="text" value="" placeholder="What needs to be done" class="new-todo" data-reactid=".1rqnihb629s.0.1"/></header><section class="main" data-reactid=".1rqnihb629s.1"></section></div></div>
+  <div class="todoapp" id="root"><div data-reactid=".m7v826m1og" data-react-checksum="25585718"><header class="header" data-reactid=".m7v826m1og.0"><h1 data-reactid=".m7v826m1og.0.0">todos</h1><input type="text" value="" placeholder="What needs to be done" class="new-todo" data-reactid=".m7v826m1og.0.1"/></header><section class="main" data-reactid=".m7v826m1og.1"></section></div></div>
 
   
-<script src="./js/vendors.a2d95929ce51f17c9a8b.js"></script><script src="./js/todomvc-app.a2d95929ce51f17c9a8b.js"></script></body>
+<script src="./js/vendors.32f77565c1c963bed1bb.js"></script><script src="./js/todomvc-app.32f77565c1c963bed1bb.js"></script></body>
 </html>
